Tabla de estudiantes
Diseño de la tabla de estudiantes

--- a/puxbit/src/app/app.component.html
+++ b/puxbit/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div id="main-wrapper">
   <app-navbar></app-navbar>
   <app-sidebar></app-sidebar>
+  <div class="page-wrapper">
+    <div class="container-fluid">
+        <app-alumnos></app-alumnos>
+    </div>
+  </div>
 </div>
