--- a/puxbit/src/app/componentes/sidebar/sidebar.component.html
+++ b/puxbit/src/app/componentes/sidebar/sidebar.component.html
@@ -4,19 +4,14 @@
       <!-- Sidebar navigation-->
       <nav class="sidebar-nav">
           <ul id="sidebarnav">
-              <li class="user-profile">
-                  <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img src="assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs </span></a>
-                  <ul aria-expanded="false" class="collapse">
-                      <li><a href="javascript:void()">My Profile </a></li>
-                      <li><a href="javascript:void()">My Balance</a></li>
-                      <li><a href="javascript:void()">Inbox</a></li>
-                      <li><a href="javascript:void()">Account Setting</a></li>
-                      <li><a href="javascript:void()">Logout</a></li>
-                  </ul>
-              </li>
               <li class="nav-devider"></li>
-              <li class="nav-small-cap">PERSONAL</li>
-              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-gauge"></i><span class="hide-menu">Dashboard <span class="label label-rouded label-themecolor pull-right">4</span></span></a>
+              <li class="nav-small-cap">OPCIONES</li>
+              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+                <i class="mdi mdi-gauge">
+                </i>
+                <span class="hide-menu">Estadisticas
+                  <span class="label label-rouded label-themecolor pull-right">4</span>
+                </span></a>
                   <ul aria-expanded="false" class="collapse">
                       <li><a href="index.html">Minimal </a></li>
                       <li><a href="index2.html">Analytical</a></li>
@@ -24,7 +19,7 @@
                       <li><a href="index4.html">Modern</a></li>
                   </ul>
               </li>
-              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Apps</span></a>
+              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Registros</span></a>
                   <ul aria-expanded="false" class="collapse">
                       <li><a href="app-calendar.html">Calendar</a></li>
                       <li><a href="app-chat.html">Chat app</a></li>
@@ -34,7 +29,7 @@
                       <li><a href="app-contact-detail.html">Contact Detail</a></li>
                   </ul>
               </li>
-              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Inbox</span></a>
+              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-email"></i><span class="hide-menu">Mensajes</span></a>
                   <ul aria-expanded="false" class="collapse">
                       <li><a href="app-email.html">Mailbox</a></li>
                       <li><a href="app-email-detail.html">Mailbox Detail</a></li>
@@ -71,49 +66,7 @@
                       <li><a href="ui-dragable-portlet.html">Dragable Portlet</a></li>
                   </ul>
               </li>
-              <li class="nav-small-cap">FORMS, TABLE &amp; WIDGETS</li>
-              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-file"></i><span class="hide-menu">Forms</span></a>
-                  <ul aria-expanded="false" class="collapse">
-                      <li><a href="form-basic.html">Basic Forms</a></li>
-                      <li><a href="form-layout.html">Form Layouts</a></li>
-                      <li><a href="form-addons.html">Form Addons</a></li>
-                      <li><a href="form-material.html">Form Material</a></li>
-                      <li><a href="form-float-input.html">Floating Lable</a></li>
-                      <li><a href="form-pickers.html">Form Pickers</a></li>
-                      <li><a href="form-upload.html">File Upload</a></li>
-                      <li><a href="form-mask.html">Form Mask</a></li>
-                      <li><a href="form-validation.html">Form Validation</a></li>
-                      <li><a href="form-dropzone.html">File Dropzone</a></li>
-                      <li><a href="form-icheck.html">Icheck control</a></li>
-                      <li><a href="form-img-cropper.html">Image Cropper</a></li>
-                      <li><a href="form-bootstrapwysihtml5.html">HTML5 Editor</a></li>
-                      <li><a href="form-typehead.html">Form Typehead</a></li>
-                      <li><a href="form-wizard.html">Form Wizard</a></li>
-                      <li><a href="form-xeditable.html">Xeditable Editor</a></li>
-                      <li><a href="form-summernote.html">Summernote Editor</a></li>
-                      <li><a href="form-tinymce.html">Tinymce Editor</a></li>
-                  </ul>
-              </li>
-              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Tables</span></a>
-                  <ul aria-expanded="false" class="collapse">
-                      <li><a href="table-basic.html">Basic Tables</a></li>
-                      <li><a href="table-layout.html">Table Layouts</a></li>
-                      <li><a href="table-data-table.html">Data Tables</a></li>
-                      <li><a href="table-footable.html">Footable</a></li>
-                      <li><a href="table-jsgrid.html">Js Grid Table</a></li>
-                      <li><a href="table-responsive.html">Responsive Table</a></li>
-                      <li><a href="table-bootstrap.html">Bootstrap Tables</a></li>
-                      <li><a href="table-editable-table.html">Editable Table</a></li>
-                  </ul>
-              </li>
-              <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-widgets"></i><span class="hide-menu">Widgets</span></a>
-                  <ul aria-expanded="false" class="collapse">
-                      <li><a href="widget-data.html">Data Widgets</a></li>
-                      <li><a href="widget-apps.html">Apps Widgets</a></li>
-                      <li><a href="widget-charts.html">Charts Widgets</a></li>
 
-                  </ul>
-              </li>
               <li class="nav-small-cap">EXTRA COMPONENTS</li>
               <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-book-multiple"></i><span class="hide-menu">Page Layout</span></a>
                   <ul aria-expanded="false" class="collapse">
